update forcast and search UI

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <nav id="search-container">
     
     <div id="search-content" class="closed">
-        <h4 id="close">&#215;</h4>
+        <div id="close-div">
+            <h6>close</h6>
+            <h4 id="close">&#215;</h4>
+        </div>
         <input type="text" name="city" placeholder="search for a city">
         <!-- buttons go here -->
         <div id="btn-container">
