add function to store cities in local storage and render buttons to page

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
             <h6>close</h6>
             <h4 id="close">&#215;</h4>
         </div>
-        <input type="text" name="city" placeholder="search for a city">
+        <form id="search-form">
+        <input type="text" id="city-search" name="city" placeholder="search for a city">
+        </form>
         <!-- buttons go here -->
         <div id="btn-container">
-            <button class="city-btn">Adelaide</button>
         </div>
+
     </div>
 </nav>
 <!-- todays city and temp -->
@@ -36,7 +38,7 @@
     </div>
     <div id="today-condition-container">
         <div id="today-icon"></div>
-        <h3 id="today-weather">sunny</h3>
+        <h3 id="today-weather"></h3>
     </div>
     
 </div>
