--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <div id="left-container">
         <h4 id="arrow">></h4>
         <div id="today-container">
-            <h3 id="city-name">ADELAIDE</h3>
+            <h3 id="city-name"></h3>
             <div id="current-temp-container">
-                <h1 id="today-temp">18</h1>
+                <h1 id="today-temp"></h1>
                 <h1>&#176;</h1>
             </div>
         </div>
@@ -45,11 +45,11 @@
 <!-- today other info -->
 <div id="info-container">
     <div class="info">
-        <h2 id="humidity">80%</h2>
+        <h2 id="humidity"></h2>
         <h5>Humidity</h5>
     </div>
     <div class="info">
-        <h2 id="windspeed">9 m/s</h2>
+        <h2 id="windspeed"></h2>
         <h5>Wind</h5>
     </div>
     <div class="info">
