add background images

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </div>
 </nav>
 <!-- todays city and temp -->
+<div style="width: 100vw;">
 <div class="flex-container">
     <div id="left-container">
         <h4 id="arrow">></h4>
@@ -60,6 +61,7 @@
         
         <h5>UV</h5>
     </div>
+</div>
 </div>
 <!-- forcast cards -->
 <div id="forcast-container">
